nodes/mc/gomc/y.output

state 0
	$accept: .route $end 

	NAME  shift 3
	.  error

	route  goto 1
	node  goto 2

state 1
	$accept:  route.$end 

	$end  accept
	.  error


state 2
	route:  node.'>' node 
	route:  node.'<' node 
	route:  node.'<' '>' node 
	route:  node.'>' transforms '>' node 

	'<'  shift 5
	'>'  shift 4
	.  error


state 3
	node:  NAME.    (5)

	.  reduce 5 (src line 122)


state 4
	route:  node '>'.node 
	route:  node '>'.transforms '>' node 

	NAME  shift 3
	'?'  shift 9
	'%'  shift 10
	'='  shift 11
	.  error

	node  goto 6
	transforms  goto 7
	transform  goto 8

state 5
	route:  node '<'.node 
	route:  node '<'.'>' node 

	NAME  shift 3
	'>'  shift 13
	.  error

	node  goto 12

state 6
	route:  node '>' node.    (1)

	.  reduce 1 (src line 91)


state 7
	route:  node '>' transforms.'>' node 

	'>'  shift 14
	.  error


8: shift/reduce conflict (shift 15(3), red'n 6(0)) on '>'
state 8
	transforms:  transform.    (6)
	transforms:  transform.'>' transforms 

	'>'  shift 15
	.  error


state 9
	transform:  '?'.'{' expr '}' 

	'{'  shift 16
	.  error


state 10
	transform:  '%'.'{' script '}' 

	'{'  shift 17
	.  error


state 11
	transform:  '='.'{' NAME ':' expr '}' 

	'{'  shift 18
	.  error


state 12
	route:  node '<' node.    (2)

	.  reduce 2 (src line 98)


state 13
	route:  node '<' '>'.node 

	NAME  shift 3
	.  error

	node  goto 19

state 14
	route:  node '>' transforms '>'.node 

	NAME  shift 3
	.  error

	node  goto 20

state 15
	transforms:  transform '>'.transforms 

	'?'  shift 9
	'%'  shift 10
	'='  shift 11
	.  error

	transforms  goto 21
	transform  goto 8

state 16
	transform:  '?' '{'.expr '}' 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 22

state 17
	transform:  '%' '{'.script '}' 

	NAME  shift 31
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	script  goto 28
	stmt  goto 29
	expr  goto 30

state 18
	transform:  '=' '{'.NAME ':' expr '}' 

	NAME  shift 32
	.  error


state 19
	route:  node '<' '>' node.    (3)

	.  reduce 3 (src line 105)


state 20
	route:  node '>' transforms '>' node.    (4)

	.  reduce 4 (src line 114)


state 21
	transforms:  transform '>' transforms.    (7)

	.  reduce 7 (src line 131)


state 22
	transform:  '?' '{' expr.'}' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 

	'%'  shift 38
	'}'  shift 33
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	.  error


state 23
	expr:  NUMBER.    (15)

	.  reduce 15 (src line 174)


state 24
	expr:  NAME.    (16)

	.  reduce 16 (src line 181)


state 25
	expr:  STRING.    (17)

	.  reduce 17 (src line 187)


state 26
	expr:  '-'.expr 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 39

state 27
	expr:  '('.expr ')' 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 40

state 28
	transform:  '%' '{' script.'}' 

	'}'  shift 41
	.  error


state 29
	script:  stmt.    (11)
	script:  stmt.script 

	NAME  shift 31
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  reduce 11 (src line 149)

	script  goto 42
	stmt  goto 29
	expr  goto 30

state 30
	stmt:  expr.';' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 

	'%'  shift 38
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	';'  shift 43
	.  error


state 31
	stmt:  NAME.'=' expr ';' 
	expr:  NAME.    (16)

	'='  shift 44
	.  reduce 16 (src line 181)


state 32
	transform:  '=' '{' NAME.':' expr '}' 

	':'  shift 45
	.  error


state 33
	transform:  '?' '{' expr '}'.    (8)

	.  reduce 8 (src line 136)


state 34
	expr:  expr '+'.expr 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 46

state 35
	expr:  expr '-'.expr 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 47

state 36
	expr:  expr '*'.expr 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 48

state 37
	expr:  expr '/'.expr 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 49

state 38
	expr:  expr '%'.expr 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 50

39: shift/reduce conflict (shift 38(0), red'n 18(1)) on '%'
39: shift/reduce conflict (shift 34(0), red'n 18(1)) on '+'
39: shift/reduce conflict (shift 35(0), red'n 18(1)) on '-'
39: shift/reduce conflict (shift 36(0), red'n 18(1)) on '*'
39: shift/reduce conflict (shift 37(0), red'n 18(1)) on '/'
state 39
	expr:  '-' expr.    (18)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 

	'%'  shift 38
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	.  reduce 18 (src line 193)


state 40
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 

	'%'  shift 38
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	')'  shift 51
	.  error


state 41
	transform:  '%' '{' script '}'.    (9)

	.  reduce 9 (src line 140)


state 42
	script:  stmt script.    (12)

	.  reduce 12 (src line 154)


state 43
	stmt:  expr ';'.    (13)

	.  reduce 13 (src line 159)


state 44
	stmt:  NAME '='.expr ';' 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 52

state 45
	transform:  '=' '{' NAME ':'.expr '}' 

	NAME  shift 24
	NUMBER  shift 23
	STRING  shift 25
	'-'  shift 26
	'('  shift 27
	.  error

	expr  goto 53

46: shift/reduce conflict (shift 38(0), red'n 20(0)) on '%'
46: shift/reduce conflict (shift 34(0), red'n 20(0)) on '+'
46: shift/reduce conflict (shift 35(0), red'n 20(0)) on '-'
46: shift/reduce conflict (shift 36(0), red'n 20(0)) on '*'
46: shift/reduce conflict (shift 37(0), red'n 20(0)) on '/'
state 46
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (20)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 

	'%'  shift 38
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	.  reduce 20 (src line 203)


47: shift/reduce conflict (shift 38(0), red'n 21(0)) on '%'
47: shift/reduce conflict (shift 34(0), red'n 21(0)) on '+'
47: shift/reduce conflict (shift 35(0), red'n 21(0)) on '-'
47: shift/reduce conflict (shift 36(0), red'n 21(0)) on '*'
47: shift/reduce conflict (shift 37(0), red'n 21(0)) on '/'
state 47
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (21)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 

	'%'  shift 38
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	.  reduce 21 (src line 209)


48: shift/reduce conflict (shift 38(0), red'n 22(0)) on '%'
48: shift/reduce conflict (shift 34(0), red'n 22(0)) on '+'
48: shift/reduce conflict (shift 35(0), red'n 22(0)) on '-'
48: shift/reduce conflict (shift 36(0), red'n 22(0)) on '*'
48: shift/reduce conflict (shift 37(0), red'n 22(0)) on '/'
state 48
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (22)
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 

	'%'  shift 38
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	.  reduce 22 (src line 215)


49: shift/reduce conflict (shift 38(0), red'n 23(0)) on '%'
49: shift/reduce conflict (shift 34(0), red'n 23(0)) on '+'
49: shift/reduce conflict (shift 35(0), red'n 23(0)) on '-'
49: shift/reduce conflict (shift 36(0), red'n 23(0)) on '*'
49: shift/reduce conflict (shift 37(0), red'n 23(0)) on '/'
state 49
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (23)
	expr:  expr.'%' expr 

	'%'  shift 38
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	.  reduce 23 (src line 221)


50: shift/reduce conflict (shift 38(0), red'n 24(0)) on '%'
50: shift/reduce conflict (shift 34(0), red'n 24(0)) on '+'
50: shift/reduce conflict (shift 35(0), red'n 24(0)) on '-'
50: shift/reduce conflict (shift 36(0), red'n 24(0)) on '*'
50: shift/reduce conflict (shift 37(0), red'n 24(0)) on '/'
state 50
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr '%' expr.    (24)

	'%'  shift 38
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	.  reduce 24 (src line 227)


state 51
	expr:  '(' expr ')'.    (19)

	.  reduce 19 (src line 199)


state 52
	stmt:  NAME '=' expr.';' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 

	'%'  shift 38
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	';'  shift 54
	.  error


state 53
	transform:  '=' '{' NAME ':' expr.'}' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 

	'%'  shift 38
	'}'  shift 55
	'+'  shift 34
	'-'  shift 35
	'*'  shift 36
	'/'  shift 37
	.  error


state 54
	stmt:  NAME '=' expr ';'.    (14)

	.  reduce 14 (src line 166)


state 55
	transform:  '=' '{' NAME ':' expr '}'.    (10)

	.  reduce 10 (src line 144)

Rule not reduced: transforms:  transform 

29 terminals, 8 nonterminals
25 grammar rules, 56/8000 states
31 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 25/120000
19 extra closures
143 shift entries, 1 exceptions
23 goto entries
3 entries saved by goto default
Optimizer space used: output 98/120000
98 table entries, 9 zero
maximum spread: 29, maximum offset: 45
